fix aboutme spacing

--- a/src/scss/layout/_about.scss
+++ b/src/scss/layout/_about.scss
@@ -35,7 +35,7 @@
     }
     &__description {
       text-align: left;
-      font-size: $font-size-s;
+      font-size: $font-size-xs;
       width: 317px;
     }
     &__button {
